Learnings/2.k8s/playground/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: nginx-clusterip
            port:
              number: 80
#      - path: /discounted
#        pathType: ImplementationSpecific
#        backend:
#          service:
#            name: my-discounted-products
#            port:
#              number: 80
